Upgrade dependencies and remove lots of Dapla1 stuff
This is to prepare for running the pseudo service on a per team basis.